# kasm-manager

./: .gitignore  README.md  kasm-manager.py  kasminstance.py  nginx.conf  pyproject.toml  setup.sh
Ansible/: inventory.yml  swarm-manager.yml  swarm-worker.yml
Ansible/roles/docker/tasks/: main.yml
Dockerfiles/: Dockerfile-kali  Dockerfile-pc4  Dockerfile-terminal  kasmvnc.yaml
Terraform/: main.tf  manager.tf  workers.tf
